# llm-groupchat

./: README.md
backend/: Cargo.toml
backend/migrations/: 1_llm_log_setup.sql
backend/src/: lib.rs  main.rs
backend/src/data/models/: groupchat_1.rs  mod.rs
backend/src/models/: groupchat.rs  llm_log.rs  llm_model.rs  mod.rs
backend/src/repositories/: base.rs  error.rs  llm_log_repo.rs  mod.rs
backend/src/services/: groupchat_service.rs  llm_service.rs  mod.rs  scheduler_service.rs
